// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/office-groups-api create should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;

exports[`api/office-groups-api delete should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;

exports[`api/office-groups-api get should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;

exports[`api/office-groups-api getIndex should return response of the api 1`] = `
Object {
  "list": Array [
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 10,
      "name": "北海道ブロック",
      "sortOrder": 10,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 11,
      "name": "北海道",
      "parentOfficeGroupId": 10,
      "sortOrder": 11,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 20,
      "name": "東北ブロック",
      "sortOrder": 20,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 21,
      "name": "青森",
      "parentOfficeGroupId": 20,
      "sortOrder": 21,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 22,
      "name": "岩手",
      "parentOfficeGroupId": 20,
      "sortOrder": 22,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 23,
      "name": "宮城",
      "parentOfficeGroupId": 20,
      "sortOrder": 23,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 24,
      "name": "秋田",
      "parentOfficeGroupId": 20,
      "sortOrder": 24,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 25,
      "name": "山形",
      "parentOfficeGroupId": 20,
      "sortOrder": 25,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 26,
      "name": "福島",
      "parentOfficeGroupId": 20,
      "sortOrder": 26,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 30,
      "name": "関東ブロック",
      "sortOrder": 30,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 31,
      "name": "茨城",
      "parentOfficeGroupId": 30,
      "sortOrder": 31,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 32,
      "name": "栃木",
      "parentOfficeGroupId": 30,
      "sortOrder": 32,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 33,
      "name": "群馬",
      "parentOfficeGroupId": 30,
      "sortOrder": 33,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 34,
      "name": "埼玉",
      "parentOfficeGroupId": 30,
      "sortOrder": 34,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 35,
      "name": "千葉",
      "parentOfficeGroupId": 30,
      "sortOrder": 35,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 36,
      "name": "東京",
      "parentOfficeGroupId": 30,
      "sortOrder": 36,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 37,
      "name": "神奈川",
      "parentOfficeGroupId": 30,
      "sortOrder": 37,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 40,
      "name": "甲信越ブロック",
      "sortOrder": 40,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 41,
      "name": "新潟",
      "parentOfficeGroupId": 40,
      "sortOrder": 41,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 42,
      "name": "富山",
      "parentOfficeGroupId": 40,
      "sortOrder": 42,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 43,
      "name": "石川",
      "parentOfficeGroupId": 40,
      "sortOrder": 43,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 44,
      "name": "福井",
      "parentOfficeGroupId": 40,
      "sortOrder": 44,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 45,
      "name": "山梨",
      "parentOfficeGroupId": 40,
      "sortOrder": 45,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 46,
      "name": "長野",
      "parentOfficeGroupId": 40,
      "sortOrder": 46,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 50,
      "name": "中部ブロック",
      "sortOrder": 50,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 51,
      "name": "岐阜",
      "parentOfficeGroupId": 50,
      "sortOrder": 51,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 52,
      "name": "静岡",
      "parentOfficeGroupId": 50,
      "sortOrder": 52,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 53,
      "name": "愛知",
      "parentOfficeGroupId": 50,
      "sortOrder": 53,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 54,
      "name": "三重",
      "parentOfficeGroupId": 50,
      "sortOrder": 54,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 60,
      "name": "関西ブロック",
      "sortOrder": 60,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 61,
      "name": "滋賀",
      "parentOfficeGroupId": 60,
      "sortOrder": 61,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 62,
      "name": "京都",
      "parentOfficeGroupId": 60,
      "sortOrder": 62,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 63,
      "name": "大阪",
      "parentOfficeGroupId": 60,
      "sortOrder": 63,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 64,
      "name": "兵庫",
      "parentOfficeGroupId": 60,
      "sortOrder": 64,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 65,
      "name": "奈良",
      "parentOfficeGroupId": 60,
      "sortOrder": 65,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 66,
      "name": "和歌山",
      "parentOfficeGroupId": 60,
      "sortOrder": 66,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 70,
      "name": "中四国ブロック",
      "sortOrder": 70,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 71,
      "name": "鳥取",
      "parentOfficeGroupId": 70,
      "sortOrder": 71,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 72,
      "name": "島根",
      "parentOfficeGroupId": 70,
      "sortOrder": 72,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 73,
      "name": "岡山",
      "parentOfficeGroupId": 70,
      "sortOrder": 73,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 74,
      "name": "広島",
      "parentOfficeGroupId": 70,
      "sortOrder": 74,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 75,
      "name": "山口",
      "parentOfficeGroupId": 70,
      "sortOrder": 75,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 76,
      "name": "徳島",
      "parentOfficeGroupId": 70,
      "sortOrder": 76,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 77,
      "name": "香川",
      "parentOfficeGroupId": 70,
      "sortOrder": 77,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 78,
      "name": "愛媛",
      "parentOfficeGroupId": 70,
      "sortOrder": 78,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 79,
      "name": "高知",
      "parentOfficeGroupId": 70,
      "sortOrder": 79,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 80,
      "name": "九州ブロック",
      "sortOrder": 80,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 81,
      "name": "福岡",
      "parentOfficeGroupId": 80,
      "sortOrder": 81,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 82,
      "name": "佐賀",
      "parentOfficeGroupId": 80,
      "sortOrder": 82,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 83,
      "name": "長崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 83,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 84,
      "name": "熊本",
      "parentOfficeGroupId": 80,
      "sortOrder": 84,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 85,
      "name": "大分",
      "parentOfficeGroupId": 80,
      "sortOrder": 85,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 86,
      "name": "宮崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 86,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 87,
      "name": "鹿児島",
      "parentOfficeGroupId": 80,
      "sortOrder": 87,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 88,
      "name": "沖縄",
      "parentOfficeGroupId": 80,
      "sortOrder": 88,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
  ],
  "pagination": Object {
    "count": 55,
    "desc": false,
    "itemsPerPage": 55,
    "page": 1,
    "pages": 1,
    "sortBy": "",
  },
}
`;

exports[`api/office-groups-api getIndex should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;

exports[`api/office-groups-api sort should put /api/office-groups 1`] = `
Object {
  "list": Array [
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 10,
      "name": "北海道ブロック",
      "sortOrder": 10,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 11,
      "name": "北海道",
      "parentOfficeGroupId": 10,
      "sortOrder": 11,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 20,
      "name": "東北ブロック",
      "sortOrder": 20,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 21,
      "name": "青森",
      "parentOfficeGroupId": 20,
      "sortOrder": 21,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 22,
      "name": "岩手",
      "parentOfficeGroupId": 20,
      "sortOrder": 22,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 23,
      "name": "宮城",
      "parentOfficeGroupId": 20,
      "sortOrder": 23,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 24,
      "name": "秋田",
      "parentOfficeGroupId": 20,
      "sortOrder": 24,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 25,
      "name": "山形",
      "parentOfficeGroupId": 20,
      "sortOrder": 25,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 26,
      "name": "福島",
      "parentOfficeGroupId": 20,
      "sortOrder": 26,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 30,
      "name": "関東ブロック",
      "sortOrder": 30,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 31,
      "name": "茨城",
      "parentOfficeGroupId": 30,
      "sortOrder": 31,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 32,
      "name": "栃木",
      "parentOfficeGroupId": 30,
      "sortOrder": 32,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 33,
      "name": "群馬",
      "parentOfficeGroupId": 30,
      "sortOrder": 33,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 34,
      "name": "埼玉",
      "parentOfficeGroupId": 30,
      "sortOrder": 34,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 35,
      "name": "千葉",
      "parentOfficeGroupId": 30,
      "sortOrder": 35,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 36,
      "name": "東京",
      "parentOfficeGroupId": 30,
      "sortOrder": 36,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 37,
      "name": "神奈川",
      "parentOfficeGroupId": 30,
      "sortOrder": 37,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 40,
      "name": "甲信越ブロック",
      "sortOrder": 40,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 41,
      "name": "新潟",
      "parentOfficeGroupId": 40,
      "sortOrder": 41,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 42,
      "name": "富山",
      "parentOfficeGroupId": 40,
      "sortOrder": 42,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 43,
      "name": "石川",
      "parentOfficeGroupId": 40,
      "sortOrder": 43,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 44,
      "name": "福井",
      "parentOfficeGroupId": 40,
      "sortOrder": 44,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 45,
      "name": "山梨",
      "parentOfficeGroupId": 40,
      "sortOrder": 45,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 46,
      "name": "長野",
      "parentOfficeGroupId": 40,
      "sortOrder": 46,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 50,
      "name": "中部ブロック",
      "sortOrder": 50,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 51,
      "name": "岐阜",
      "parentOfficeGroupId": 50,
      "sortOrder": 51,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 52,
      "name": "静岡",
      "parentOfficeGroupId": 50,
      "sortOrder": 52,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 53,
      "name": "愛知",
      "parentOfficeGroupId": 50,
      "sortOrder": 53,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 54,
      "name": "三重",
      "parentOfficeGroupId": 50,
      "sortOrder": 54,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 60,
      "name": "関西ブロック",
      "sortOrder": 60,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 61,
      "name": "滋賀",
      "parentOfficeGroupId": 60,
      "sortOrder": 61,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 62,
      "name": "京都",
      "parentOfficeGroupId": 60,
      "sortOrder": 62,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 63,
      "name": "大阪",
      "parentOfficeGroupId": 60,
      "sortOrder": 63,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 64,
      "name": "兵庫",
      "parentOfficeGroupId": 60,
      "sortOrder": 64,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 65,
      "name": "奈良",
      "parentOfficeGroupId": 60,
      "sortOrder": 65,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 66,
      "name": "和歌山",
      "parentOfficeGroupId": 60,
      "sortOrder": 66,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 70,
      "name": "中四国ブロック",
      "sortOrder": 70,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 71,
      "name": "鳥取",
      "parentOfficeGroupId": 70,
      "sortOrder": 71,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 72,
      "name": "島根",
      "parentOfficeGroupId": 70,
      "sortOrder": 72,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 73,
      "name": "岡山",
      "parentOfficeGroupId": 70,
      "sortOrder": 73,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 74,
      "name": "広島",
      "parentOfficeGroupId": 70,
      "sortOrder": 74,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 75,
      "name": "山口",
      "parentOfficeGroupId": 70,
      "sortOrder": 75,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 76,
      "name": "徳島",
      "parentOfficeGroupId": 70,
      "sortOrder": 76,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 77,
      "name": "香川",
      "parentOfficeGroupId": 70,
      "sortOrder": 77,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 78,
      "name": "愛媛",
      "parentOfficeGroupId": 70,
      "sortOrder": 78,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 79,
      "name": "高知",
      "parentOfficeGroupId": 70,
      "sortOrder": 79,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 80,
      "name": "九州ブロック",
      "sortOrder": 80,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 81,
      "name": "福岡",
      "parentOfficeGroupId": 80,
      "sortOrder": 81,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 82,
      "name": "佐賀",
      "parentOfficeGroupId": 80,
      "sortOrder": 82,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 83,
      "name": "長崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 83,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 84,
      "name": "熊本",
      "parentOfficeGroupId": 80,
      "sortOrder": 84,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 85,
      "name": "大分",
      "parentOfficeGroupId": 80,
      "sortOrder": 85,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 86,
      "name": "宮崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 86,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 87,
      "name": "鹿児島",
      "parentOfficeGroupId": 80,
      "sortOrder": 87,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 88,
      "name": "沖縄",
      "parentOfficeGroupId": 80,
      "sortOrder": 88,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
  ],
}
`;

exports[`api/office-groups-api sort should return response of the api 1`] = `
Object {
  "list": Array [
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 10,
      "name": "北海道ブロック",
      "sortOrder": 10,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 11,
      "name": "北海道",
      "parentOfficeGroupId": 10,
      "sortOrder": 11,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 20,
      "name": "東北ブロック",
      "sortOrder": 20,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 21,
      "name": "青森",
      "parentOfficeGroupId": 20,
      "sortOrder": 21,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 22,
      "name": "岩手",
      "parentOfficeGroupId": 20,
      "sortOrder": 22,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 23,
      "name": "宮城",
      "parentOfficeGroupId": 20,
      "sortOrder": 23,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 24,
      "name": "秋田",
      "parentOfficeGroupId": 20,
      "sortOrder": 24,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 25,
      "name": "山形",
      "parentOfficeGroupId": 20,
      "sortOrder": 25,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 26,
      "name": "福島",
      "parentOfficeGroupId": 20,
      "sortOrder": 26,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 30,
      "name": "関東ブロック",
      "sortOrder": 30,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 31,
      "name": "茨城",
      "parentOfficeGroupId": 30,
      "sortOrder": 31,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 32,
      "name": "栃木",
      "parentOfficeGroupId": 30,
      "sortOrder": 32,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 33,
      "name": "群馬",
      "parentOfficeGroupId": 30,
      "sortOrder": 33,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 34,
      "name": "埼玉",
      "parentOfficeGroupId": 30,
      "sortOrder": 34,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 35,
      "name": "千葉",
      "parentOfficeGroupId": 30,
      "sortOrder": 35,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 36,
      "name": "東京",
      "parentOfficeGroupId": 30,
      "sortOrder": 36,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 37,
      "name": "神奈川",
      "parentOfficeGroupId": 30,
      "sortOrder": 37,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 40,
      "name": "甲信越ブロック",
      "sortOrder": 40,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 41,
      "name": "新潟",
      "parentOfficeGroupId": 40,
      "sortOrder": 41,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 42,
      "name": "富山",
      "parentOfficeGroupId": 40,
      "sortOrder": 42,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 43,
      "name": "石川",
      "parentOfficeGroupId": 40,
      "sortOrder": 43,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 44,
      "name": "福井",
      "parentOfficeGroupId": 40,
      "sortOrder": 44,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 45,
      "name": "山梨",
      "parentOfficeGroupId": 40,
      "sortOrder": 45,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 46,
      "name": "長野",
      "parentOfficeGroupId": 40,
      "sortOrder": 46,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 50,
      "name": "中部ブロック",
      "sortOrder": 50,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 51,
      "name": "岐阜",
      "parentOfficeGroupId": 50,
      "sortOrder": 51,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 52,
      "name": "静岡",
      "parentOfficeGroupId": 50,
      "sortOrder": 52,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 53,
      "name": "愛知",
      "parentOfficeGroupId": 50,
      "sortOrder": 53,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 54,
      "name": "三重",
      "parentOfficeGroupId": 50,
      "sortOrder": 54,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 60,
      "name": "関西ブロック",
      "sortOrder": 60,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 61,
      "name": "滋賀",
      "parentOfficeGroupId": 60,
      "sortOrder": 61,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 62,
      "name": "京都",
      "parentOfficeGroupId": 60,
      "sortOrder": 62,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 63,
      "name": "大阪",
      "parentOfficeGroupId": 60,
      "sortOrder": 63,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 64,
      "name": "兵庫",
      "parentOfficeGroupId": 60,
      "sortOrder": 64,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 65,
      "name": "奈良",
      "parentOfficeGroupId": 60,
      "sortOrder": 65,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 66,
      "name": "和歌山",
      "parentOfficeGroupId": 60,
      "sortOrder": 66,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 70,
      "name": "中四国ブロック",
      "sortOrder": 70,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 71,
      "name": "鳥取",
      "parentOfficeGroupId": 70,
      "sortOrder": 71,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 72,
      "name": "島根",
      "parentOfficeGroupId": 70,
      "sortOrder": 72,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 73,
      "name": "岡山",
      "parentOfficeGroupId": 70,
      "sortOrder": 73,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 74,
      "name": "広島",
      "parentOfficeGroupId": 70,
      "sortOrder": 74,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 75,
      "name": "山口",
      "parentOfficeGroupId": 70,
      "sortOrder": 75,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 76,
      "name": "徳島",
      "parentOfficeGroupId": 70,
      "sortOrder": 76,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 77,
      "name": "香川",
      "parentOfficeGroupId": 70,
      "sortOrder": 77,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 78,
      "name": "愛媛",
      "parentOfficeGroupId": 70,
      "sortOrder": 78,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 79,
      "name": "高知",
      "parentOfficeGroupId": 70,
      "sortOrder": 79,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 80,
      "name": "九州ブロック",
      "sortOrder": 80,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 81,
      "name": "福岡",
      "parentOfficeGroupId": 80,
      "sortOrder": 81,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 82,
      "name": "佐賀",
      "parentOfficeGroupId": 80,
      "sortOrder": 82,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 83,
      "name": "長崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 83,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 84,
      "name": "熊本",
      "parentOfficeGroupId": 80,
      "sortOrder": 84,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 85,
      "name": "大分",
      "parentOfficeGroupId": 80,
      "sortOrder": 85,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 86,
      "name": "宮崎",
      "parentOfficeGroupId": 80,
      "sortOrder": 86,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 87,
      "name": "鹿児島",
      "parentOfficeGroupId": 80,
      "sortOrder": 87,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
    Object {
      "createdAt": "2018-05-17T12:34:56.789+0900",
      "id": 88,
      "name": "沖縄",
      "parentOfficeGroupId": 80,
      "sortOrder": 88,
      "updatedAt": "2018-05-17T12:34:56.789+0900",
    },
  ],
  "pagination": Object {
    "count": 55,
    "desc": false,
    "itemsPerPage": 55,
    "page": 1,
    "pages": 1,
    "sortBy": "",
  },
}
`;

exports[`api/office-groups-api sort should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;

exports[`api/office-groups-api update should throw an AxiosError when failed to request 1`] = `"Request failed with status code 400"`;
